--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -14,8 +14,10 @@ dependencies:
   #   # `public` flag doesn't have an effect dependencies of the `main` component.
   #   # All dependencies of `main` are public by default.
   #   public: true
-  waveshare/esp32_s3_touch_amoled_1_75: ^1.0.2
+  waveshare/esp32_s3_touch_amoled_1_75: ^2.0.0
   # waveshare/esp32_s3_touch_amoled_1_75:
-  #   git: https://github.com/ukos-git/Waveshare-ESP32-components.git
-  #   version: d9cd504ba4edf9b5044db51f83b44e9307ec4548
+  #   git: https://github.com/waveshareteam/Waveshare-ESP32-components.git
+  #   version: 3dcdac3957aebdb1d3b3219b3159552725da0a1e
+  #   path: ../managed_components/waveshare__esp32_s3_touch_amoled_1_75/bsp/esp32_s3_touch_amoled_1_75
+
 
